Minor cleanup and refactoring (#24)